# Voip-Application-opus

./: README.md
voip_workspace-master/: .gitignore  CMakeLists.txt  README.md
voip_workspace-master/demo/: CMakeLists.txt  hello_rtaudio.cpp  socket_demo.cpp  tonegen.cpp
voip_workspace-master/ext/opus/src/: CMakeLists.txt
voip_workspace-master/src/: CMakeLists.txt  audiodecoder.cpp  audiodecoder.h  audioencoder.cpp  audioencoder.h  main.cpp  opus_settings.h  receiver.cpp  receiver.h  rtp_depacker.cpp  rtp_depacker.h  rtp_packer.cpp  rtp_packer.h  sender.cpp  sender.h  simplejb - Kopie (2).cpp  simplejb - Kopie (2).h  simplejb.cpp  simplejb.h  voip_comm.cpp  voip_comm.h
voip_workspace-master/util/: CMakeLists.txt
voip_workspace-master/util/include/: audiobuffer.h  socket.h  soundcard.h
voip_workspace-master/util/src/: audiobuffer.cpp  soundcard.cpp
voip_workspace-master/util/src/posix/: socket_posix.cpp
voip_workspace-master/util/src/win/: socket_win.cpp
